--- a/app/views/budget/index.html.erb
+++ b/app/views/budget/index.html.erb
@@ -1,9 +1,7 @@
 <div class="section">
- <div class="title">
- <h1>Budget</h1>
- </div>
- <div class="links">
-   <%= link_to "LOG IN", user_signup_path %>
-   <%= link_to "SIGN UP IN", some_path %>
- </div>
+ <h1>Welcome to Your Budget App</h1>
+<p>
+  <a href="<%= new_user_registration_path %>">Sign Up</a>
+  <a href="<%= new_user_session_path %>">Log In</a>
+</p>
 </div>
