--- a/app/views/budget/index.html.erb
+++ b/app/views/budget/index.html.erb
@@ -1,7 +1,17 @@
 <div class="section">
- <h1>Welcome to Your Budget App</h1>
-<p>
-  <a href="<%= new_user_registration_path %>">Sign Up</a>
-  <a href="<%= new_user_session_path %>">Log In</a>
-</p>
+ <div class="title"></div>
+ <h1>Budget</h1>
+ </div>
+ <div class="links">
+
+  <% if user_signed_in? %>
+    <%= link_to "SIGN OUT",  destroy_user_session_path, data: {turbo_method: :delete }, class: "btn btn-primary" %>
+
+    <% else %>
+    <%= link_to "LOG IN", new_user_session_path, class: "btn btn-primary" %> <br>
+    <%= link_to "SIGN UP ", new_user_registration_path, class: "btn btn-primary" %>
+  <% end %>
+
+
+ </div>
 </div>
