--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @category, url: categories_path, local: true) do |form| %>
+<%= form_with(model: @category, url: categories_path) do |form| %>
   <%= form.label :name %>
   <%= form.text_field :name %>
 
