--- a/app/views/transaction_budgets/new.html.erb
+++ b/app/views/transaction_budgets/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [@category, @transaction], url: category_transaction_budgets_path(@category), local: true) do |form| %>
+<%= form_for [@category, @transaction] do |form| %>
   <%= form.label :name %>
   <%= form.text_field :name %>
 
