--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,13 +1,23 @@
-<h1>Your Categories</h1>
-<ul>
-  <% @categories.each do |category| %>
-    <li>
-      <%= category.name %>
-      Icon: <%= image_tag category.icon if category.icon.attached? %>
-      Total Amount: <%= category.transaction_budgets.sum(:amount) %>
-      <%= link_to "View Transactions", category_transaction_budgets_path(category) %>
-    </li>
+<section class='category-list'>
+  <% if @categories.empty? %>
+    <h2 class='empty'> There is no category yet! </h2>
+  <% else %>
+    <ul class='category-list'>
+      <% @categories.each do |category| %>
+        <li>
+          <%= link_to category_transaction_budgets_path(category), class: 'cat-link' do %>
+            Icon: <%= image_tag category.icon if category.icon.attached? %>
+            <div class='cat-info'>
+              <h2><%= category.name %></h2>
+              <small>Total amount: <%= category.transaction_budgets.sum(:amount) %> $</small>
+            </div>
+          <% end %>
+          <%= link_to 'Add a new transaction', new_category_transaction_budget_path(category), class: 'btn btn-primary' %>
+        </li>
+      <% end %>
+    </ul>
   <% end %>
-</ul>
-<%= link_to "Add a new transaction", new_category_transaction_budget_path, class: "btn btn-primary" %>
-<%= link_to "Back", categories_path %>
+
+  <%= link_to '+ New Category', new_category_path, class: 'btn' %>
+  <%= link_to 'Back', categories_path %>
+</section>
