--- a/app/views/transaction_budgets/new.html.erb
+++ b/app/views/transaction_budgets/new.html.erb
@@ -1,6 +1,6 @@
 <% if @transaction.errors.any? %>
   <div id="error_explanation">
-    <h2><%= pluralize(@transaction.errors.count, "error") %> prohibited this transaction from being saved:</h2>
+    <h2><%= pluralize(@transaction.errors.count, "error") prohibited this transaction from being saved:</h2> %>
     <ul>
     <% @transaction.errors.full_messages.each do |message| %>
       <li><%= message %></li>
