style transaction page and forms

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,38 +2,39 @@
 @font-face {
   font-family: 'proxima_nova_rgregular';
   src: url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.eot');
-  src: url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.eot?#iefix') format('embedded-opentype'),
+  src:
+    url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.eot?#iefix') format('embedded-opentype'),
     url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.woff') format('woff'),
     url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.ttf') format('truetype'),
     url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.svg#proxima_nova_rgregular') format('svg');
   font-weight: normal;
   font-style: normal;
- }
- @font-face {
+}
+
+@font-face {
   font-family: 'proxima_nova_rgbold';
   src: url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.eot');
-  src: url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.eot?#iefix') format('embedded-opentype'),
+  src:
+    url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.eot?#iefix') format('embedded-opentype'),
     url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.woff') format('woff'),
     url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.ttf') format('truetype'),
     url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.svg#proxima_nova_rgbold') format('svg');
   font-weight: normal;
   font-style: normal;
- }
-
-
-
-*{
-    box-sizing: border-box;
-    font-family: 'Proxima Nova', sans-serif;
-    margin: 0;
-    padding: 0;
 }
+
+* {
+  box-sizing: border-box;
+  font-family: 'Proxima Nova', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
 header {
   background-color: #333;
   color: #fff;
   padding: 10px;
 }
-
 
 :root {
   --main-color: #3778c2;
@@ -41,6 +42,13 @@ header {
   --text-color: #434b54;
   --title-fonts: 'Proxima Nova Bold', sans-serif;
   --text-family: 'Proxima Nova Light', sans-serif;
+}
+
+h1,
+h2,
+h3 {
+  font-family: 'proxima_nova_rgbold', Helvetica, Arial, sans-serif;
+  color: #333; /* Your headline color */
 }
 
 /* Category list styles */
@@ -49,151 +57,162 @@ ul.category-list {
   padding: 0;
 }
 
-
-
 ul.category-list li h2 {
   font-size: 1.2em;
 }
-
 
 img {
   width: 50px;
   height: 50px;
 }
 
-
-
-:root {
-  --main-color: #3778c2;
-  --sec-color: #5fb523;
-  --text-color: #434b54;
-  --title-fonts: 'Proxima Nova Bold', sans-serif;
-  --text-family: 'Proxima Nova Light', sans-serif;
-}
-
-
 body {
- font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
- margin: 0 auto;
- align-items: center;
- display: grid;
- place-items: center;
- background-color: whitesmoke;
-
+  font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
+  margin: 0 auto;
+  align-items: center;
+  display: grid;
+  place-items: center;
+  background-color: whitesmoke;
 }
 
-p{
+p {
   font-size: 20px;
 }
 
 .container {
- max-width: 400px;
- width: 375px;
- display: flex;
- /* justify-content: center; */
- flex-direction: column;
- background-color: #fff;
- height: 100vh;
+  max-width: 400px;
+  width: 375px;
+  display: flex;
+
+  /* justify-content: center; */
+  flex-direction: column;
+  background-color: #fff;
+  height: 100vh;
 }
 
-h1, h2, h3 {
- font-family: 'proxima_nova_rgbold', Helvetica, Arial, sans-serif;
- color: #333; /* Your headline color */
+p,
+a,
+li {
+  font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
+  color: #666; /* Your general text color */
+  list-style: none;
 }
 
-p, a, li {
- font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
- color: #666; /* Your general text color */
- list-style: none;
-}
-
-a{
+a {
   text-decoration: none;
 }
 
-
-.navbar{
+.navbar {
   background-color: var(--main-color);
   max-width: 400px;
   width: 375px;
 }
-.navbar-content{
+
+.navbar-content {
   display: flex;
   justify-content: space-between;
   color: #fff;
   padding: 10px;
 }
 
-.navbar-content p, .navbar-content p i{
+.navbar-content p,
+.navbar-content p i {
   color: #fff;
 }
 
 
 
 /* Add more global mobile styles as needed */
-.section{
- display: grid;
- grid-template-rows: 85% 10%;
- justify-items: center;
- align-content: space-between;
- gap: 20px;
+.section {
+  display: grid;
+  grid-template-rows: 85% 10%;
+  justify-items: center;
+  align-content: space-between;
+  gap: 20px;
 }
 
-.app-name{
-
-}
-
-.links-group {
-
-}
-
-.links{
- width: 300px;
- position:absolute;
- bottom: 0;
- right: 50%;
- left: 35%;
-}
-.links a {
- display: inline-block;
- width: 100%;
- text-decoration: none;
- text-align: center;
- padding: 15px 0;
- margin: 10px 0;
- border: 1px solid #ccc;
- border-radius: 5px;
-}
-
-
-
-/* .messages{
+.links {
+  width: 300px;
   position: absolute;
-  top: 0;
-  margin: 5px 10px;
-  width: 361px;
-  left: 30%;
+  bottom: 0;
+  right: 50%;
+  left: 35%;
 }
-*/
-.notice{
+
+.links a {
+  display: inline-block;
+  width: 100%;
+  text-decoration: none;
+  text-align: center;
+  padding: 15px 0;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.transaction-details {
+  padding: 10px;
+}
+
+.transaction-details h3 {
+  text-align: center;
+}
+
+.transaction-details ul {
+  padding: 5px 20px;
+}
+
+.transaction-details ul li {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 0;
+}
+
+.transaction {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 20px;
+}
+
+.label-cate {
+  display: block;
+  text-align: center;
+  color: red;
+  font-size: 20px;
+  margin: 10px 0;
+}
+
+.notice {
   text-align: center;
   background-color: green;
   width: 375px;
-  color:#fff;
-
+  color: #fff;
 }
-.alert{
+
+.alert {
   text-align: center;
   background-color: red;
   width: 375px;
-  color:#fff;
+  color: #fff;
 }
 
-#error_explanation, #error_explanation small{
-  color:red ;
+#error_explanation,
+#error_explanation small {
+  color: red;
 }
 
-.actions .btn-login{
+.app-name {
+  margin-top: 100px;
+}
+
+.btn-login,
+.btn-signout {
+  color: #fff;
+  background-color: var(--main-color);
+}
+
+.actions .btn-login {
   width: 100%;
   padding: 10px;
   border-radius: 10px;
@@ -201,17 +220,24 @@ a{
   margin-bottom: 20px;
 }
 
-.btn-create{
+.btn-create {
   margin-top: 20px;
   width: 100%;
   padding: 10px;
   border-radius: 10px;
   border: none;
+  display: block;
+  color: #fff;
   margin-bottom: 20px;
+  cursor: pointer;
   background-color: var(--sec-color);
 }
 
-.back{
+.new-transaction {
+  margin: 0;
+}
+
+.back {
   text-align: center;
   display: block;
   border-radius: 10px;
@@ -221,56 +247,51 @@ a{
   background-color: #3778c2;
   color: #fff;
 }
-.field input{
+
+.field input {
   width: 100%;
   padding: 10px;
+
   /* border-radius: 4px; */
   border: none;
-  border-bottom: .1px solid;
+  border-bottom: 0.1px solid;
 }
 
-.devise{
+.devise {
   text-align: center;
   text-decoration: none;
 }
 
-.btn-login, .btn-signout{
-  color: #fff;
-  background-color: var(--main-color);
-}
-
-.signout{
+.signout {
   margin-top: 70px;
 }
 
-.category{
+.category {
   margin: 10px;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0 2px 8px 0;
   padding: 5px;
 }
 
-.category .cat-link{
+.category .cat-link {
   display: flex;
   justify-content: space-between;
   align-items: center;
   text-decoration: none;
-
 }
 
-.btn-new-cat{
+.btn-new-cat {
   position: absolute;
-    bottom: 0;
-    background: #8BC34A;
-    width: 360px;
-    margin: 10px;
-    text-decoration: none;
-    text-align: center;
-    padding: 15px 0;
-    margin: 10px 5px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+  bottom: 0;
+  background: #8bc34a;
+  width: 360px;
+  text-decoration: none;
+  text-align: center;
+  padding: 15px 0;
+  margin: 10px 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
 
-.date{
-  padding: 0 50px 12px 100px
+.date {
+  padding: 0 50px 12px 100px;
 }
