--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -18,7 +18,9 @@
       <% end %>
     </ul>
   <% end %>
-
+<div class="field">
   <%= link_to '+ New Category', new_category_path, class: 'btn-new-cat' %>
-  <%= link_to 'Back', categories_path %>
+  
+  <%= link_to 'Back', categories_path, class: "back"  %>
+  </div>
 </section>
